# trilium-diary

./: .gitignore  README.md  SKILL.md  api.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: note-taker.md
docs/superpowers/plans/: 2026-06-30-recap-refactor.md  2026-07-03-knowledge-notes.md
docs/superpowers/specs/: 2026-06-30-recap-refactor-design.md  2026-07-03-knowledge-notes-design.md
etc/: .gitignore  config.example.json
references/: etapi.md  note-triage-rules.md
scripts/: jsonl_render.py  trilium.py
tests/: test_check.py  test_client.py  test_commands.py  test_jsonl_render.py  test_pure.py
tests/fixtures/: sample_session.jsonl
