[project]
name = "trilium-diary"
version = "0.1.0"
description = "把开发日记（踩坑、里程碑、决策、学习）写入 Trilium Notes 日历面板"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.5",
    "requests>=2.31",
]

[project.scripts]
trilium-diary = "trilium:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
