[project]
name = "trilium-diary"
version = "2.0.0"
description = "把当前 Claude Code 会话的对话 JSONL 忠实渲染成 markdown，写入 Trilium 日历面板"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.5",
    "requests>=2.31",
]

[project.scripts]
trilium-diary = "trilium:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
