[project]
name = "trilium-diary"
version = "3.0.0"
description = "通用 Trilium 知识笔记助手：把 Claude Code 会话里的 TIL / 想法 / 参考资料写入分类树 + 日历双入口"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.5",
    "requests>=2.31",
]

[project.scripts]
trilium-diary = "trilium:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
